# CopperForge

./: .gitignore  3d_demo  CLAUDE_CODE_CONTEXT.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION_PLAN.md  KiForge_workspace_Cargo.toml  README.md  ROADMAP.md  build.rs  crates_structure.md  discover_api.rs  test_api.rs  test_build.sh  workspace_design.md
assets/: system_block_diagram
crates/copperforge-core/: Cargo.toml  build.rs
crates/copperforge-core/src/: app.rs  lib.rs  main.rs
crates/copperforge-core/src/display/: manager.rs
crates/copperforge-core/src/drc_operations/: manager.rs  types.rs
crates/copperforge-core/src/ecs/: README.md  components.rs  detection.rs  factories.rs  mod.rs  resources.rs  systems.rs  types.rs  units.rs  units_old.rs
crates/copperforge-core/src/export/: mod.rs
crates/copperforge-core/src/layer_operations/: detection.rs
crates/copperforge-core/src/navigation/: layer_coordinates.rs  mod.rs
crates/copperforge-core/src/platform/: banner.rs  mod.rs
crates/copperforge-core/src/project/: defaults.rs  manager.rs  mod.rs
crates/copperforge-core/src/project_manager/: database.rs  mod.rs
crates/copperforge-core/src/ui/: about_panel.rs  bom_panel_v2.rs  drc_panel.rs  grid_settings.rs  layer_controls.rs  mod.rs  project_manager_panel.rs  project_panel.rs  selection.rs  settings_panel.rs  tabs.rs
crates/kicad-ecs/: README.md
crates/kiforge-core/: Cargo.toml
crates/kiforge-core/src/: app.rs  main.rs
crates/kiforge-core/src/display/: grid.rs
crates/kiforge-core/src/ecs/: components.rs  factories.rs  mod.rs
crates/kiforge-core/src/kicad/: tests.rs
crates/kiforge-core/src/layer_operations/: detection.rs  mod.rs  types.rs
crates/kiforge-core/src/platform/: banner.rs  mod.rs
crates/kiforge-core/src/project/: constants.rs
crates/kiforge-core/src/project_manager/: mod.rs
crates/kiforge-core/src/ui/: about_panel.rs  bom_panel.rs  layer_controls.rs  project_panel.rs  view_settings_panel.rs
crates/librepcb-ecs/: Cargo.toml  README.md
crates/librepcb-ecs/examples/: basic.rs
crates/librepcb-ecs/src/: components.rs  lib.rs  systems.rs  world.rs
examples/: standalone_3d_demo.rs  test_3d_simple.rs
src/: defaults.rs  drc.rs  grid.rs  layer_detection.rs  layers.rs  main.rs  project_state.rs
src/display/: grid.rs  manager.rs  mod.rs
src/drc_operations/: manager.rs  mod.rs  types.rs
src/ecs/: README.md  compatibility.rs  components.rs  conversion.rs  factories.rs  gerber_components.rs  gerber_extrudable.rs  kiparse_integration.rs  mesh3d.rs  mod.rs  origin_system.rs  pcb3d_integration.rs  pcb_viewer.rs  rendering3d.rs  resources.rs  systems.rs  wgpu_renderer.rs  world.rs
src/ecs/shaders/: pcb.wgsl
src/export/: mod.rs
src/kicad/: error.rs  mod.rs  pcb_parser.rs  simple_parser.rs  symbol_parser.rs
src/kicad_api/: mod.rs
src/layer_operations/: manager.rs  mod.rs
src/managers/: drc.rs  layer.rs  mod.rs  project.rs
src/platform/: mod.rs
src/project/: constants.rs  defaults.rs  manager.rs  mod.rs
src/project_manager/: bom.rs  database.rs  mod.rs
src/renderer/: egui_wgpu_widget.rs  gerber_components.rs  gerber_extrudable.rs  mesh3d.rs  mod.rs  pcb3d_integration.rs  pcb_renderer.rs  test_cube.rs  wgpu_renderer.rs
src/renderer/shaders/: cube.wgsl  pcb.wgsl
src/ui/: about_panel.rs  bom_panel_v2.rs  drc_panel.rs  ecs_panel.rs  file_browser.rs  grid_settings.rs  kicad_panel.rs  layer_controls.rs  mod.rs  orientation_panel.rs  pcb_layer_panel.rs  pcb_renderer.rs  project_manager_panel.rs  project_panel.rs  selection.rs  settings_panel.rs  tabs.rs  view_settings_panel.rs
src/viewer3d/: camera.rs  controls.rs  mod.rs  pcb_viewer.rs  renderer.rs  step_exporter.rs  zoom_state.rs
src/viewer_3d/: mod.rs  pcb_3d.rs  simple_3d.rs
tests/: test_3d_integration.rs
