[package]
name = "kiforge"
version = "0.1.1"
edition = "2024"
authors = ["James Bonanno <atlantix-eda@proton.me>"]

[dependencies]
egui = "0.31.1"
eframe = "0.31.1"
egui-file-dialog = "0.9.0"

# Image and graphics handling
egui_extras = { version = "0.31.1", features = ["image"] } # For image loading and other utilities
image = "0.24" # For image loading

# Gerber and PCB handling
gerber_viewer = { path = "../gerber_viewer" }
gerber_parser = { git = "https://github.com/MakerPnP/gerber-parser" }
gerber_types = { git = "https://github.com/MakerPnP/gerber-types" }
nalgebra = "0.33"

# Egui Mobius framework
egui_lens = { version = "0.1.0"}
egui_mobius_reactive = { version = "0.3.0-alpha.31" }
egui_mobius = { version = "0.3.0-alpha.31" }

# Logging and configuration
env_logger = "0.11.8"
log = "0.4"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.35.1"
local-ip = "0.1.0"
chrono = "0.4.41"
chrono-tz = "0.10"
local-ip-address = "0.6.5"
egui_dock = {version = "0.16.0", features=["serde"]}
rfd = "0.15.3"
notify = "8.0.0"

regex = "1.10"
once_cell = "1.19"
bytemuck = "1.23.1"
egui-wgpu = "0.31.1"
wgpu = "24.0"


# delete this, it's just a cargo workspace workaround
[workspace]
