[workspace]
resolver = "2"
members = [
    "crates/kicad-ecs",
    "crates/librepcb-ecs",
    "crates/copperforge-core",
]

[package]
name = "copperforge"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "copperforge"
path = "src/main.rs"

[dependencies]
copperforge-core = { path = "crates/copperforge-core" }
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
env_logger.workspace = true
log.workspace = true

[workspace.package]
version = "0.1.7"
edition = "2024"
authors = ["James Bonanno <atlantix-eda@proton.me>"]

[workspace.dependencies]
egui = "0.32"
eframe = "0.32"
egui-file-dialog = "0.11.0"

# Image and graphics handling
egui_extras = { version = "0.32", features = ["image"] } # For image loading and other utilities
image = "0.24" # For image loading

# Gerber and PCB handling
gerber_viewer = "0.4.0"
gerber_types = { package = "gerber-types", version = "0.6.0" }
gerber_parser = "0.3.0"
nalgebra = "0.33"

# Egui Mobius framework
egui_lens = { path = "../egui_lens/crates/egui_lens" }
egui_mobius_reactive = { version = "0.3.0-alpha.32" }
egui_mobius = { version = "0.3.0-alpha.32" }

# Logging and configuration
env_logger = "0.11.8"
log = "0.4"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.35.1"
local-ip = "0.1.0"
chrono = "0.4.41"
chrono-tz = "0.10"
local-ip-address = "0.6.5"
egui_dock = {version = "0.17.0", features=["serde"]}
rfd = "0.15.3"
notify = "8.0.0"

regex = "1.10"
once_cell = "1.19"

# ECS framework
bevy_ecs = "0.14"

# Async runtime
futures = "0.3"

# Project database
sled = "0.34"
bincode = "1.3"
thiserror = "1.0"