[package]
name = "librepcb-ecs"
version = "0.1.0"
edition = "2021"
authors = ["James Bonanno <atlantix-eda@proton.me>"]
description = "Entity Component System (ECS) architecture for LibrePCB design data"
repository = "https://github.com/Atlantix-EDA/CopperForge"
license = "MIT OR Apache-2.0"
keywords = ["librepcb", "ecs", "pcb", "cad", "electronics"]
categories = ["science", "simulation"]

[dependencies]
bevy_ecs = "0.14"
eyre = "0.6"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Placeholder dependencies - will be updated when LibrePCB API is integrated
# tokio = { version = "1", features = ["full"] }
# API communication dependencies TBD

[[example]]
name = "basic"
path = "examples/basic.rs"